--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
   - 5.4
 
 before_script: 
-  - composer.phar install
+  - composer install
   - app/console cache:clear --no-warmup
 
 script: 
