--- a/src/TO/TestBundle/Resources/config/routing.yml
+++ b/src/TO/TestBundle/Resources/config/routing.yml
@@ -1,3 +1,12 @@
-to_test_homepage:
+hello:
     pattern:  /hello/{name}
     defaults: { _controller: TOTestBundle:Default:index }
+
+misc_get_routing_name:
+    pattern:  /misc/get_routing_name
+    defaults: { _controller: TOTestBundle:Misc:get_routing_name }
+
+misc_return_plain_text:
+    pattern:  /misc/misc_return_plain_text
+    defaults: { _controller: TOTestBundle:Misc:misc_return_plain_text }
+
